--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "project using layabox build by webpack",
   "main": "index.js",
   "scripts": {
+    "dev": "node_modules/.bin/webpack-dev-server --content-base dist/",
+    "start": "node build/dev-server.js",
+    "build": "node build/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,6 +16,18 @@
   "author": "meddkim",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.1.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.4",
+    "opn": "^5.1.0",
+    "raw-loader": "^0.5.1",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-merge": "^4.1.0"
   }
 }
